# csv-to-custom-json-python

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  commit.sh  csv.txt  log.md  main.py  main.py.save  py.py  pyproject.toml  setup.cfg  test.py
docs/: Home.md  How-to-install.md  How-to-know-more.md  How-to-options.md  How-to-use.md
src/csv_to_custom_json/: __init__.py  csv_to_custom_json.py
tests/: simple copy.csv  simple_complexe.csv  simple_complexe_with_void_line.csv  simple_customSeparator.csv  test.py  test_array_parse.py  test_avoidVoidLine.py  test_avoidVoidLine2.py  test_avoidVoidLine3.py  test_callBack.py  test_callBack_force.py  test_callBack_force_2.py  test_callBack_force_bad_value.py  test_callBack_value.py  test_complex_json.py  test_complex_json_10.py  test_complex_json_11.py  test_complex_json_2.py  test_complex_json_3.py  test_complex_json_4.py  test_complex_json_5.py  test_complex_json_6.py  test_complex_json_7.py  test_complex_json_8.py  test_complex_json_9.py  test_custom_separator.py  test_debug.py  test_debug_2.py  test_debug_3.py  test_no_file.py  test_no_file_no_error.py  test_none.py  test_normal.py  test_only_options.py  test_override_first_line.py  test_parse_from_array.py  test_parse_value.py  test_private_separator.py  test_private_separator_2.py  test_simple_test.py  (+1 more)
