[metadata]
name = csv-to-custom-json
version = 0.0.3
author = n4n5
author_email = its.just.n4n5@gmail.com
description = Easily convert your CSV to custom JSON
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/its-just-nans/csv-to-custom-json-python
project_urls =
    Bug Tracker = https://github.com/its-just-nans/csv-to-custom-json-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
